--- a/SRC/page_strat/cairos.html
+++ b/SRC/page_strat/cairos.html
@@ -107,13 +107,13 @@
                 Voici une liste des runes que vous y trouverez :
                 </br>
                 </br>
-                <a><img src="../../image/géant.png"></a>
+                <a><img src="../../image/geant.png"></a>
                 </br>
                 </br>
                 Et voici les éléments à partir de l'étage 5 :
                 </br>
                 </br>
-                <a><img src="../../image/géant2.png"></a>
+                <a><img src="../../image/geant2.png"></a>
 
                 <h3>
                     <U>B) LES DONJONS LIÉS AUX ÉVÈNEMENTS</U>
